--- a/biblio.bib
+++ b/biblio.bib
@@ -7,6 +7,7 @@
 }
 
 @manual{cppspec,
+  author={{C++ Standard Commitee}},
   title={Working Draft, Standard for Programming Language C++},
   year={2012},
   note={http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3337.pdf}
@@ -36,6 +37,7 @@
  location = {Pittsburgh, Pennsylvania},
  pages = {1--5},
  numpages = {5},
+
  url = {http://doi.acm.org/10.1145/592849.592850},
  doi = {10.1145/592849.592850},
  acmid = {592850},
@@ -211,15 +213,30 @@
 
 
 @misc{lefessant-prop,
-  author={Fabrice Le Fessant},
+  author={Le Fessant, Fabrice},
   year={2012},
   title={Proposal for namespaces},
   note={url??}
 }
 
 @misc{lefessant-bigfunctors,
-  author={Fabrice Le Fessant},
+  author={Le Fessant, Fabrice},
   year={2011},
   title={Packing and Functors},
   note={http://www.ocamlpro.com/blog/2011/08/10/ocaml-pack-functors.html}
+}
+
+@book{EcmaScript,
+  added-at = {2012-10-14T23:50:22.000+0200},
+  author = {{ECMA International}},
+  biburl = {http://www.bibsonomy.org/bibtex/2a9b23a5e720836b2505b7aac7fdc4638/gron},
+  edition = {5.1},
+  interhash = {b179dfe8f7ed6ef5ad2a2c4705d88de6},
+  intrahash = {a9b23a5e720836b2505b7aac7fdc4638},
+  keywords = {ECMA JavaScript Specification Standard},
+  month = {June},
+  timestamp = {2012-10-14T23:50:22.000+0200},
+  title = {Standard ECMA-262 - ECMAScript Language Specification},
+  url = {http://www.ecma-international.org/publications/standards/Ecma-262.htm},
+  year = 2011
 }
