--- a/biblio.bib
+++ b/biblio.bib
@@ -169,9 +169,10 @@
 
 
 @manual{python-spec,
-  title={The Python Language Reference (3.4.0)},
-  misc={The import and packages system:
-        https://docs.python.org/3/reference/import.html}
+  title={The Python Language Reference (3.4.1)},
+  author={{The Python Software Foundation}},
+  year={2014},
+  misc={https://docs.python.org/3/reference/}
 }
 
 @INPROCEEDINGS{Drossopoulou99afragment,
@@ -240,3 +241,23 @@
   url = {http://www.ecma-international.org/publications/standards/Ecma-262.htm},
   year = 2011
 }
+
+@article{Naur:1960:RAL:367236.367262,
+ author = {Backus, J. W. and Bauer, F. L. and Green, J. and Katz, C. and McCarthy, J. and Perlis, A. J. and Rutishauser, H. and Samelson, K. and Vauquois, B. and Wegstein, J. H. and van Wijngaarden, A. and Woodger, M.},
+ editor = {Naur, Peter},
+ title = {Report on the Algorithmic Language ALGOL 60},
+ journal = {Commun. ACM},
+ issue_date = {May 1960},
+ volume = {3},
+ number = {5},
+ month = may,
+ year = {1960},
+ issn = {0001-0782},
+ pages = {299--314},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/367236.367262},
+ doi = {10.1145/367236.367262},
+ acmid = {367262},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
