Nouvelle presentation + correction rapport

--- a/OCaml2014/pres.tex
+++ b/OCaml2014/pres.tex
@@ -414,12 +414,10 @@ parametric namespaces.
 \begin{frame}
 \frametitle{Functor units: restrictions}
 \begin{itemize}[<+->]
-\item Each cmi given to \texttt{-functor} must belong to the same namespace as
-  the functor unit currently compiled;
 \item Functor units can have dependencies:
   \begin{itemize}
     \item Standard compilation units
-    \item Functor units with the \alert{same arguments}
+    \item Functor units with the \alert{same arguments} and in the \alert{same namespace}
     \item Their arguments
   \end{itemize}
 \item No currification
